<resources>
    <string name="app_name">MoneyTracker</string>
    <string name="navigation_drawer_open" translatable="false">Open Navigation</string>
    <string name="navigation_drawer_close" translatable="false">Close Navigation</string>
    <string name="nav_drawer_expenses">Траты</string>
    <string name="nav_drawer_statistics">Статистика</string>
    <string name="nav_drawer_categories">Категории</string>
    <string name="nav_drawer_settings">Настройки</string>
    <string name="default_username">Sergey Valevich</string>
    <string name="default_user_email">kukareku@mail.ru</string>
    <string name="new_expense_amount_hint">Сумма</string>
    <string name="new_expense_description_hint">Описание</string>
    <string name="new_expense_activity_title">Добавить трату</string>
    <string name="date_picker_title">Выберите дату</string>
    <string name="categories_picker_positive">OK</string>
    <string name="categories_picker_negative">ОТМЕНА</string>
    <string name="save_expense_button_title">ДОБАВИТЬ</string>
    <string name="cancel_button_title">ОТМЕНА</string>
    <string name="new_expense_cancel_warning">Поля очищены</string>
    <string name="new_expense_save_message">Сохранено</string>
    <string name="new_expense_empty_fields_warning">Заполните правильно все поля!</string>
    <string name="new_expense_error_saving_message">Ошибка сохранения</string>
    <string name="action_search">Поиск</string>
    <string name="search_hint">Поиск</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="create_account_btn_title">Создать аккаунт</string>
    <string name="login_btn_title">Войти</string>
    <string name="token_key">TOKEN_KEY</string>
    <string name="network_unavailable">Сеть недоступна</string>
    <string name="wrong_auth_input">Имя пользователя и пароль должны содержать от 5 до 10 символов!</string>
    <string name="login_busy_message">Пользователь с таким именем уже существует</string>
    <string name="general_error_message">Упс! Возникла ошибка. Попробуйте ещё раз.</string>
    <string name="google_account_picker_error_msg">Извините. Возникла ошибка. Попробуйте ещё раз.</string>
    <string name="email_hint">Email</string>
    <string name="invalid_username_msg">Имя пользователя должно содержать не менее 5 символов</string>
    <string name="invalid_password_msg">Пароль должен содержать не менее 5 символов</string>
    <string name="invalid_email_msg">Неправильный email</string>
    <string name="sign_up_text">Регистрация</string>
    <string name="wrong_username_msg">Неправильное имя пользователя</string>
    <string name="wrong_password_msg">Неправильный пароль</string>
    <string name="content_authority">com.loftschool.loftmoneytracker</string>
    <string name="sync_account_type">loftmoneytracker.loftschool.com</string>
    <string name="action_logout">Выход</string>
    <string name="selected_action_remove">remove</string>
    <string name="dialog_title_new_category">Новая категория</string>
    <string name="dialog_title_edit_category">Изменить название</string>
    <string name="save_category_button_title">ДОБАВИТЬ</string>
    <string name="wrong_category_message">Недопустимое название категории</string>
    <string name="expense_removed_msg">Запись будет удалена!</string>
    <string name="undo_delete_action_msg">ОТМЕНИТЬ</string>
    <string name="nav_drawer_exit">Выход</string>
    <string name="chart_total_center_text">Всего</string>
    <string name="google_sign_in_button_text">Google</string>

    <!-- sync preferences -->

    <string name="pref_sync_section">Синхронизация</string>
    <string name="pref_sync_interval_label">Интервал синхронизации</string>
    <string name="pref_sync_interval_default">3600</string>

    <string
        name="pref_sync_interval_key"
        translatable="false">sync_interval</string>

    <!-- notification preferences -->

    <string
        name="pref_enable_notifications_key"
        translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Получать уведомления</string>
    <string name="pref_notifications_summary">Сообщать о завершении синхронизации</string>
    <string
        name="pref_enable_notifications_default"
        translatable="false">true</string>

    <string name="pref_enable_sound_key"
            translatable="false">enable_sound</string>
    <string name="pref_enable_sound_label">Звук</string>
    <string
        name="pref_enable_sound_default"
        translatable="false">true</string>

    <string name="pref_enable_indicator_key"
            translatable="false">enable_indicator</string>
    <string name="pref_enable_indicator_label">Индикатор</string>
    <string
        name="pref_enable_indicator_default"
        translatable="false">true</string>

    <string name="pref_enable_vibration_key"
            translatable="false">enable_vibration</string>
    <string name="pref_enable_vibration_label">Вибрация</string>
    <string
        name="pref_enable_vibration_default"
        translatable="false">true</string>

    <string name="pref_notification_section">Уведомления</string>

    <string name="notification_message">Синхронизация прошла успешно</string>

    <string name="auth_dialog_message">Авторизация</string>
    <string name="max_value_msg">Максимум!</string>
    <string name="empty_categories_picker">Список категорий пуст</string>
    <string name="add_categories_prompt">Добавьте категории!</string>
    <string name="add_category_positive">Готово</string>
    <string name="error_network">Проблемы с сетью</string>
    <string name="error_no_response">Нет ответа</string>
    <string name="error_network_http">Ошибка </string>
    <string name="error_unknown">Неизвестная ошибка</string>
    <string name="google_token_error_message">Не удалось войти. Повтор</string>
    <string name="logout_dialog_message">Выход</string>
    <string name="sync_dialog_message">Синхронизация</string>
    <string name="auth_dialog_content">Пожалуйста подождите</string>
    <string name="logout_error_message">При выходе возникла ошибка. Попробуйте ещё раз</string>
    <string name="logo_desc">app logo</string>
    <string name="profile_image_desc">user profile image</string>
    <string name="google_icon_desc">google icon</string>
</resources>
