<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <com.valevich.moneytracker.custom.TrackerPreferenceCategory
        android:title="@string/pref_sync_section">

        <ListPreference
            android:title="@string/pref_sync_interval_label"
            android:key="@string/pref_sync_interval_key"
            android:defaultValue="@string/pref_sync_interval_default"
            android:entries="@array/entries_sync_interval_preference"
            android:entryValues="@array/entry_values_sync_interval_preference">
        </ListPreference>

    </com.valevich.moneytracker.custom.TrackerPreferenceCategory>

    <com.valevich.moneytracker.custom.TrackerPreferenceCategory
        android:title="@string/pref_notification_section">

        <SwitchPreferenceCompat
            android:title="@string/pref_enable_notifications_label"
            android:key="@string/pref_enable_notifications_key"
            android:summary = "@string/pref_notifications_summary"
            android:defaultValue="@string/pref_enable_notifications_default">
        </SwitchPreferenceCompat>

        <SwitchPreferenceCompat
            android:title="@string/pref_enable_sound_label"
            android:key="@string/pref_enable_sound_key"
            android:defaultValue="@string/pref_enable_sound_default">
        </SwitchPreferenceCompat>

        <SwitchPreferenceCompat
            android:title="@string/pref_enable_vibration_label"
            android:key="@string/pref_enable_vibration_key"
            android:defaultValue="@string/pref_enable_vibration_default">
        </SwitchPreferenceCompat>

        <SwitchPreferenceCompat
            android:title="@string/pref_enable_indicator_label"
            android:key="@string/pref_enable_indicator_key"
            android:defaultValue="@string/pref_enable_indicator_default">
        </SwitchPreferenceCompat>

    </com.valevich.moneytracker.custom.TrackerPreferenceCategory>

</PreferenceScreen>